tests/semantic/invalid/expected/type_mismatch_return.txt
semantic error: несоответствие типов - несоответствие типов в возвращаемом значении функции should_return_int
  --> tests/semantic/invalid/type_mismatch_return.src:2:12
   |
2 |     return 3.14;
   |            ^
   |
   = ожидалось: int
   = получено: float
   = подсказка: используйте явное преобразование: (int)значение

